[gd_scene load_steps=2 format=3 uid="uid://byg7qsirmatr4"]

[ext_resource type="Script" uid="uid://b2jd3d3086s4g" path="res://Scenes/ColorBlock/color_block.gd" id="1_qv5tu"]

[node name="Block" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -52.5
offset_right = 52.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(52.5, 52.5)
mouse_filter = 2
script = ExtResource("1_qv5tu")

[node name="Small_block_1" type="Control" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 0
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Small_block_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Small_block_2" type="Control" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Small_block_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Small_block_3" type="Control" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 50.0
grow_vertical = 0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Small_block_3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Small_block_4" type="Control" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Small_block_4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
flat = true

[node name="DebugLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
